test/valid-files/builtin.in.pcse
DECLARE x: REAL
x <- 0.02
OUTPUT INT(x) 
