test/invalid-files/index_non_array.in.pcse
DECLARE x: REAL
OUTPUT x[0]
